--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ton-consumer"
-version = "0.4.0"
+version = "0.5.0"
 
 [dependencies]
 anyhow = "1"
@@ -13,9 +13,9 @@ reqwest = { version = "0.11.6", features = ['json'] }
 serde = "1"
 url = "2.2.2"
 
-nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false, branch = 'feature/new-tip3' }
-nekoton-abi = { git = "https://github.com/broxus/nekoton.git", branch = 'feature/new-tip3' }
-nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false, branch = 'feature/new-tip3' }
+nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
+nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
+nekoton-utils = { git = "https://github.com/broxus/nekoton.git", default-features = false }
 ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
 base64 = "0.13.0"
 
