--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.11.10", features = ['json'] }
 serde = "1"
 url = "2.2.2"
 tokio = { version = "1.17", features = ["sync", "fs", "rt", "macros"] }
+parking_lot = "0.12.0"
 
 nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
 nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
