--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,7 @@ version = "0.6.0"
 
 [dependencies]
 anyhow = "1"
-base64 = "0.13.0"
-bincode = "1.3.3"
 futures = "0.3"
-hex = "0.4.3"
 log = "0.4.14"
 rdkafka = { version = "0.28.0", features = ["sasl"] }
 reqwest = { version = "0.11.10", features = ['json'] }
@@ -26,6 +23,7 @@ ton_block = { git = "https://github.com/broxus/ton-labs-block" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types" }
 
 ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor" }
+serde_json = "1.0.80"
 
 [target.'cfg(target_os = "macos")'.dependencies.rdkafka]
 features = ["gssapi-vendored", "sasl"]
