--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.8.0"
 anyhow = "1"
 futures = "0.3"
 log = "0.4.14"
-rdkafka = { version = "0.28.0", features = ["sasl"] }
+rdkafka = { version = "0.28.0", features = ["gssapi-vendored", "sasl", ] }
 serde = "1"
 url = "2.2.2"
 tokio = { version = "1.17", features = ["sync", "fs", "rt", "macros"] }
